ecmascript/parser/tests/test262-error-references/fail/0817f13d2237d8d2.js.stderr
error: Unexpected token Some(Word(prop)). Expected one of target
 --> $DIR/tests/test262-parser/fail/0817f13d2237d8d2.js:1:5
  |
1 | new.prop
  |     ^^^^

